# Clock

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults  sync.py
files/: index.html  ota.html  scripts.js  styles.css
main/: BatteryMonitor.cpp  BatteryMonitor.h  CMakeLists.txt  ClockManager.cpp  ClockManager.h  DhtManager.cpp  DhtManager.h  EspNowTimeSync.cpp  HlkLd2410Manager.cpp  HlkLd2410Manager.h  LogManager.cpp  LogManager.h  Max7219.cpp  Max7219.h  MqttManager.cpp  MqttManager.h  PropsManager.cpp  PropsManager.h  RtcManager.cpp  RtcManager.h  SoundCheck.cpp  SoundCheck.h  SunTimeManager.cpp  SunTimeManager.h  WebServerManager.cpp  WebServerManager.h  WifiManager.cpp  WifiManager.h  font.h  idf_component.yml  main.cpp
